--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,5 +13,10 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+
 app:
   token-secret: ${TOKEN_SECRET}
+
+server:
+  servlet:
+    context-path: /api/v1
