feat(auth): 🔐 Implemented login flow with JWT authentication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,10 @@ spring:
     hibernate:
       ddl-auto: update
 
+jwt:
+  secret: ${TOKEN_SECRET}
+
 app:
-  token-secret: ${TOKEN_SECRET}
 
 server:
   servlet:
