--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,24 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+  mvc:
+    static-path-pattern: /static/**
+  web:
+    resources:
+          static-locations: classpath:/static/
 
 jwt:
   secret: ${TOKEN_SECRET}
 
-app:
-
 server:
   servlet:
     context-path: /api/v1
+
+springdoc:
+  api-docs:
+    path: /docs/open-api
+    version: OPENAPI_3_1
+
+  swagger-ui:
+    path: /docs/swagger-ui/index.html
+    title: Ñami Ñami API Docs
