--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,13 @@ spring:
     username: ${DB_USER}
     password: ${DB_PSS}
     driver-class-name: org.postgresql.Driver
+    # On render temporal config
+    hikari:
+      maximum-pool-size: 5
+      minimum-idle: 2
+      idle-timeout: 30000
+      connection-timeout: 20000
+      max-lifetime: 600000
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
