--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,14 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - '8080:8080'
     environment:
       DB_URL: ${DB_URL}
       DB_USER: ${DB_USER}
       DB_PSS: ${DB_PSS}
       TOKEN_SECRET: ${TOKEN_SECRET}
       APP_ENV: ${APP_ENV}
+      CLOUD_NAME: ${CLOUD_NAME}
+      CLOUD_API_KEY: ${CLOUD_API_KEY}
+      CLOUD_API_SECRET: ${CLOUD_API_SECRET}
     restart: always
