--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   application:
     name: nami_nami
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 20MB
 
   datasource:
-
     url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PSS}
@@ -20,7 +24,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   mvc:
     static-path-pattern: /static/**
   web:
@@ -39,7 +43,7 @@ server:
 
 cloudinary:
   CLOUD_NAME: ${CLOUD_NAME}
-  API_KEY: ${API_KEY}
+  API_KEY: ${CLOUD_API_KEY}
   API_SECRET: ${CLOUD_API_SECRET}
 
 springdoc:
