--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '8080:8080'
+      - "8080:8080"
     environment:
       DB_URL: ${DB_URL}
       DB_USER: ${DB_USER}
@@ -14,4 +14,5 @@ services:
       CLOUD_NAME: ${CLOUD_NAME}
       CLOUD_API_KEY: ${CLOUD_API_KEY}
       CLOUD_API_SECRET: ${CLOUD_API_SECRET}
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
     restart: always
